@@ -12,8 +12,8 @@ AUX 6/tomcat.conf 2895 RMD160 36ece62ddff5257c04f47d75b9c77bd4dc198652 SHA1 8fef
 AUX 6/tomcat.init.2 4118 RMD160 dc077b83f3d2ae8b04935b360ea8bafc2b3c41fc SHA1 30e167422d6a548f78300c6712ee2cbd474e3d0b SHA256 1377ae67d963ef96ba29763d3a00d80ecc0c0ede83888b1c0d267305ecc35164
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.20-src.tar.gz 3590562 RMD160 65b1b56132c03855e352e44a24b761bccd65b90c SHA1 ab538484d8d05c83a69c70ab6bf07606282633d8 SHA256 e8f709f0aeda8e164362144aca253249f050bc330e622dbb4196434db9933298
-EBUILD tomcat-5.5.27-r5.ebuild 12018 RMD160 41576e72f8385db5531d452a70dae55832b7521c SHA1 fa592b415bf4f13344695acf2b76ecff49c0b809 SHA256 96d51db2fb8a3ce41ef033c91a9bfe2e1e34d93240305f4dfcf3e862afe371f5
-EBUILD tomcat-5.5.27-r6.ebuild 12486 RMD160 0e72c03c0c8cd99dfaacc345e1c54862eee8ec77 SHA1 8a287a00a13c507ccd916fbc03561b8e8d393bbe SHA256 14715c298c9f9e2d31bb4690ff24f0561eb9f1cda0a7f6c685f1325868195011
+EBUILD tomcat-5.5.27-r5.ebuild 10830 RMD160 2474664c0853eb0e5c63617b93651549c99926b9 SHA1 67f5edb7dbaa2dd6e921b0a7b91755040cf3243f SHA256 509424ce787c39159a426d51172b4ca39229ad570ef66f4e73e495d88698b09b
+EBUILD tomcat-5.5.27-r6.ebuild 11298 RMD160 f2e8ba59802b83f23bf0a9d1f5d3f9346c111622 SHA1 a6d86d23eaf5c5a5ba6b03a44b997d3f2fcd0f91 SHA256 08397bd374e563f7a3dcb5b40167ddb9623dd8e63ec249629f2e9a4d42d3c5ae
 EBUILD tomcat-6.0.20-r2.ebuild 6823 RMD160 fa56f226d774845b4da0d0fb95e41e79bd2fd795 SHA1 b3d9f696e1244919eb21c6a613e3cceb63bcf1c6 SHA256 acbbf4889c4c6cc0854dce24512feda1e14baa9c95ee5ad4cf79f5faa0b6b048
-MISC ChangeLog 58272 RMD160 2fd782859735a7e19b409568fec744b7ba436cce SHA1 2e669000127b38fd1633e0500cb5316fa48725e6 SHA256 6bd63e7fcef4a41b7ca014bccbe28dfd358e2475204eb8c5c959cfb7191be77d
+MISC ChangeLog 58397 RMD160 8c436f6da9aa32828730f7378d283b315f15db53 SHA1 21e580809256eab782c1016460e40868fda06fc5 SHA256 4fc219d109158df976837d7c723a6766cdde84213f16671a5e5a56d147c04950
 MISC metadata.xml 658 RMD160 db94c7bc6ba622acfe88f970aa7d2e6fa1718a2a SHA1 aa25178fefb68df9dee7d8fc0d925a2fbbb655dd SHA256 5ddc2743ca9e3ec0bef7983248a9c8eda9238425288efb3acdecc8a828714bd8
