@@ -1,6 +1,10 @@
 # ChangeLog for www-servers/tomcat
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.204 2008/12/20 18:12:22 serkan Exp $
+
+  12 Feb 2010; Vlastimil Babka <caster@gentoo.org> tomcat-5.5.27-r5.ebuild,
+  tomcat-5.5.27-r6.ebuild:
+  Remove java5 flag.
 
   02 Jul 2009; Mike Weissman <mike@weisso.com> ChangeLog:
   fixes for bug 276059
